--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gapi-script": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
+    "morgan": "^1.10.0",
     "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
