--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "gapi-script": "^1.2.0",
+    "js-cookie": "^3.0.4",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
